clickhouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
spec:
  selector:
    app: clickhouse
  ports:
    - name: tcp-client
      port: 9000
      targetPort: 9000
    - name: http
      port: 8123
      targetPort: 8123
  type: ClusterIP
