ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/games
            pathType: Prefix
            backend:
              service:
                name: game-service
                port:
                  number: 80
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
          - path: /api/track
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lugx-frontend
                port:
                  number: 80
